force-app/main/default/objects/Credentials__c/Credentials__c.object-meta.xml
<CustomObject>
    <label>Credentials</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>