force-app/main/default/objects/Credentials__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <formula>HYPERLINK(&apos;https://&apos; &amp; &apos;login.salesforce.com&apos; &amp; Source__c , &apos;Login to Production&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production</label>
    <type>Text</type>
</CustomField>