force-app/main/default/objects/Credentials__c/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <formula>HYPERLINK(&apos;https://&apos; &amp; &apos;test.salesforce.com&apos; &amp;  Source__c , &apos;Login to Sandbox&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sandbox</label>
    <type>Text</type>
</CustomField>