force-app/main/default/objects/Credentials__c/fields/SFDC_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Login_Link__c</fullName>
    <formula>IF(
    RecordType.DeveloperName != &apos;Salesforce_Services&apos; ,&apos;&apos;,
HYPERLINK(SFDC_Login_URL__c, &apos;Open&apos;))</formula>
    <label>Login Link</label>
    <type>Text</type>
</CustomField>