force-app/main/default/objects/Credentials__c/fields/SFDC_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Login_URL__c</fullName>
    <formula>IF(
    RecordType.DeveloperName != &apos;Salesforce_Services&apos; ,&apos;&apos;,
IF(
ISBLANK(URL__c),
&apos;https://&apos; &amp;
CASE(TEXT(Environment_Type__c),
&apos;Sandbox&apos;, &apos;test&apos;,
&apos;login&apos;)
&amp; &apos;.salesforce.com/?un=&apos; &amp;  SUBSTITUTE(Username__c, &quot;+&quot;, &quot;%2B&quot;)&amp; &apos;&amp;pw=&apos; &amp; Password__c,
URL__c &amp; &apos;?un=&apos; &amp;  SUBSTITUTE(Username__c, &quot;+&quot;, &quot;%2B&quot;) &amp; &apos;&amp;pw=&apos; &amp; Password__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login URL</label>
    <type>Text</type>
</CustomField>