force-app/main/default/objects/Credentials__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share</label>
    <type>Checkbox</type>
</CustomField>