force-app/main/default/objects/Credentials__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>Salesforce Instance URL</label>
    <type>Url</type>
</CustomField>