force-app/main/default/objects/Credentials__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Not Salesforce credentials.</description>
    <label>Other</label>
</RecordType>