force-app/main/default/objects/Credentials__c/recordTypes/Salesforce_Package.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Package</fullName>
    <active>true</active>
    <description>Credentials for Packages</description>
    <label>Salesforce Package</label>
</RecordType>