force-app/main/default/objects/Credentials__c/recordTypes/Salesforce_Services.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Services</fullName>
    <active>true</active>
    <description>Salesforce instance credentials.</description>
    <label>Salesforce Services</label>
</RecordType>